# daily-ai-info

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_immediate.py  scheduler_runner.py  test_static_site.py
app/: __init__.py  ai_processor.py  config.py  github_uploader.py  logger_config.py  scheduler.py  static_site_generator.py  utils.py
app/crawlers/: __init__.py  base_crawler.py  github_trending_web.py
app/templates/: archive.html  base.html  index.html  report.html
deploy/: deploy.sh  nginx.conf
test_dist/: about.html  archive.html  index.html  sitemap.xml
test_dist/reports/: 2025-09-11.html  2025-09-12.html  2025-09-13.html  2025-09-14.html  2025-09-15.html  2025-09-16.html  2025-09-17.html
